# rd2weekly

./: .gitignore  LICENSE  README.md  README.rst  constraints.txt  dev-constraints.txt  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  source.txt  topPitchers.txt
config/: leagueDivisions.json  nicknames.json
java/: .gitignore  build.gradle  gradle.properties  settings.gradle
java/buildSrc/: build.gradle
java/buildSrc/src/test/groovy/swanysimon/rd2/: GitignoreTest.groovy
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/rd2weekly/: App.java
java/src/test/java/rd2weekly/: AppTest.java
rd2weekly/: main.py  options.py  version.py
rd2weekly/src/: rd2weekly.py
rd2weekly/src/scoring/: bestPlayerPerformances.py  bestTrio.py  matchup.py  player.py  scoreboard.py  team.py  teamPoints.py  topPerformers.py  trio.py  winLossTie.py  worstPerformers.py
rd2weekly/src/summary/: allStarSummary.py  markdownFormatter.py  matchupSummary.py  redditSummary.py  trioSummary.py
rd2weekly/src/text/: jsonFileHandler.py
rd2weekly/src/web/: rd2BrowserSession.py  rd2browser.py  scoreboardParser.py  topPerformerParser.py
sampleConfig/: leagueDivisions.template
src/: main.py
summary/: all_star_simplex.py  browser.py  main.py  markdown_formatter.py  matchup_parser.py  point_leaders.py  scoring.py
