[project]
name = "rd2weekly"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
    "beautifulsoup4",
    "click",
    "docker",
    "selenium",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8 < 5",
    "isort",
    "mypy",
    "pyproject-flake8",
]

[tool.flake8]
max-line-length = 88

[tool.isort]
line_length = 88

[tool.mypy]
disallow_untyped_defs = true

[tool.pyright]
venvPath = "."
venv = ".venv"
